--- a/my_web.css
+++ b/my_web.css
@@ -76,6 +76,6 @@ footer{
   left: 0;
   padding-top: 40px;
   width: 100%;
-  height: 4%;
+  height: 29px;
   font-family:Verdana, Geneva, Tahoma, sans-seri
 }
